--- a/components/banner.module.scss
+++ b/components/banner.module.scss
@@ -1,4 +1,5 @@
 .banner_container {
+  margin-top: 209px;
   width: 100%;
   height: 750px;
   background-image: url('/images/banner.jpg');
@@ -83,6 +84,7 @@
 @media screen and (min-width: 992px) {
   .banner_container {
     height: 100vh;
+    margin-top: 123px;
     h1 {
       max-width: 300px;
       &::before {
