--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -3,6 +3,7 @@ $black: #000000;
 $lessWhite: #f1f1f1;
 $lessBlack: #101010;
 $grey: #686868;
+$orange: #ff8008;
 
 .gradient-black {
   background: #000000;
