--- a/pages/_home.scss
+++ b/pages/_home.scss
@@ -1,20 +1,123 @@
 #main-home {
-  padding-top: $fontSize * 3;
-  transition-property: background-color, color;
-  transition-duration: 0.5s;
-  .home-presentation {
-    padding: 0 $fontSize;
-    text-align: center;
-    max-width: 600px;
-    margin: 0 auto;
-    .presentation-slogan {
-      font-size: $fontSize * 1.2;
-      font-style: italic;
-      color: $orange;
+  #main-content {
+    padding-top: $fontSize * 3;
+    transition-property: background-color, color;
+    transition-duration: 0.5s;
+    .home-presentation {
+      padding: 0 $fontSize;
+      text-align: center;
+      max-width: 600px;
+      margin: 0 auto;
+      .presentation-slogan {
+        font-size: $fontSize * 1.2;
+        font-style: italic;
+        color: $orange;
+      }
+      .presentation-tip {
+        color: $orange;
+        font-weight: 600;
+      }
     }
-    .presentation-tip {
-      color: $orange;
-      font-weight: 600;
+    #articles-wall {
+      @include displayFlex(center, center);
+      margin-top: $fontSize * 3;
+      flex-wrap: wrap;
+      .article {
+        width: 300px;
+        height: 200px;
+        margin: $fontSize;
+        @include displayFlex(center, flex-end);
+        border-radius: 7px;
+        overflow: hidden;
+        cursor: pointer;
+        &:hover {
+          h3 {
+            transform: scale(1.1);
+          }
+        }
+        h3 {
+          background-color: #359;
+          color: $white;
+          width: 100%;
+          transition: all 0.3s;
+          font-size: $fontSize;
+          padding: 0.5em 0;
+        }
+        &:first-child {
+          background-image: url('/images/vscode.jpeg');
+          background-repeat: no-repeat;
+          background-size: cover;
+          background-position: center;
+        }
+        &:nth-child(2) {
+          background-image: url('/images/html.jpeg');
+          background-repeat: no-repeat;
+          background-size: cover;
+          background-position: center;
+        }
+        &:nth-child(3) {
+          background-image: url('/images/css.jpeg');
+          background-repeat: no-repeat;
+          background-size: cover;
+          background-position: center;
+        }
+        &:nth-child(4) {
+          background-image: url('/images/javascript.jpeg');
+          background-repeat: no-repeat;
+          background-size: cover;
+          background-position: center;
+        }
+        &:last-child {
+          background-image: url('/images/git.jpeg');
+          background-repeat: no-repeat;
+          background-size: cover;
+          background-position: center;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 992px) {
+  #main-home {
+    #main-content {
+      #articles-wall {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(3, 200px);
+        justify-items: center;
+        justify-content: center;
+        align-items: center;
+        grid-gap: $fontSize;
+        .article {
+          margin: 0;
+          width: 100%;
+          height: 100%;
+          h3 {
+            font-size: $fontSize * 1.3;
+            padding: 0.2em 0;
+          }
+
+          &:first-child {
+            grid-row: span 2;
+            grid-column: span 2;
+          }
+          &:nth-child(2) {
+            grid-row: 3/4;
+            grid-column: span 2;
+          }
+          &:nth-child(3) {
+            grid-column: span 3;
+          }
+          &:nth-child(4) {
+            grid-column: 3/5;
+            grid-row: span 2;
+          }
+          &:last-child {
+            grid-row: span 2;
+          }
+        }
+      }
     }
   }
 }
