--- a/sass/globals.scss
+++ b/sass/globals.scss
@@ -16,6 +16,7 @@ body {
   overflow-x: hidden;
   background-color: $lessWhite;
   position: relative;
+  background-color: $lessWhite;
   #main-content {
     max-width: 1200px;
     margin: 0 auto;
