Se crea front-end para la ruta /blog. Responsive y desktop

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -4,6 +4,7 @@ $lessWhite: #f1f1f1;
 $lessBlack: #101010;
 $grey: #686868;
 $orange: #ff8008;
+$lessGrey: #dfdfdf;
 
 .gradient-black {
   background: #000000;
