--- a/sass/globals.scss
+++ b/sass/globals.scss
@@ -19,6 +19,7 @@ body {
   background-color: $lessWhite;
   #main-content {
     max-width: 1200px;
+    min-height: 100vh;
     margin: 0 auto;
   }
   h1 {
@@ -50,3 +51,4 @@ body {
 
 @import './../layout/layout';
 @import './../pages/home';
+@import './../pages/blog/blog';
