--- a/sass/globals.scss
+++ b/sass/globals.scss
@@ -52,3 +52,4 @@ body {
 @import './../layout/layout';
 @import './../pages/home';
 @import './../pages/blog/blog';
+@import './../pages/blog/post';
