--- a/sass/globals.scss
+++ b/sass/globals.scss
@@ -1,5 +1,6 @@
 $fontSize: 16px;
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import './colors';
 @import './mixins';
 * {
