Se crea pagina de contacto con formulario funcional SIN Regex

--- a/pages/blog/_post.scss
+++ b/pages/blog/_post.scss
@@ -38,10 +38,14 @@
         display: inline-block;
         margin: 1em auto;
       }
-      #eslint-config {
+      #line-span {
         display: inline-block;
         margin: 0;
         padding: 0;
+        a {
+          margin: 0;
+          padding: 0;
+        }
       }
       img {
         width: 100%;
