--- a/sass/globals.scss
+++ b/sass/globals.scss
@@ -53,3 +53,4 @@ body {
 @import './../pages/home';
 @import './../pages/blog/blog';
 @import './../pages/blog/post';
+@import './../pages/contacto/contact';
