--- a/components/banner.module.scss
+++ b/components/banner.module.scss
@@ -1,7 +1,11 @@
 .banner_container {
-  margin-top: 209px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 130px;
   width: 100%;
-  height: 750px;
+  min-height: 100vh;
   background-image: url('/images/banner.jpg');
   background-position: center top;
   background-size: cover;
@@ -17,18 +21,19 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #0005;
+    background-color: #0007;
     z-index: 20;
   }
-  h1 {
+  .banner_h1 {
     max-width: 150px;
+    font-size: 16px * 2;
     height: max-content;
     margin: 0 auto;
     text-align: center;
     color: #f1f1f1;
     position: relative;
     z-index: 50;
-    transform: translateY(100px);
+    margin-top: 75px;
     text-transform: uppercase;
     &::before {
       content: '';
@@ -53,9 +58,9 @@
   .banner_image {
     width: 300px;
     height: 400px;
-    position: absolute;
-    top: 250px;
-    left: calc(50vw - 150px);
+    position: relative;
+    margin-top: 50px;
+    margin-bottom: 25px;
     z-index: 50;
     box-shadow: 20px 20px 50px #0000007e;
     border-radius: 100px;
@@ -63,6 +68,11 @@
     border-top: 3px solid #ffffff;
     border-left: 3px solid #ffffff;
     backdrop-filter: blur(5px);
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
 
@@ -81,23 +91,39 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .banner_container {
+    margin-top: 75px;
+  }
+}
+
 @media screen and (min-width: 992px) {
   .banner_container {
-    height: 100vh;
-    margin-top: 123px;
-    h1 {
-      max-width: 300px;
+    margin-top: 99px;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .banner_container {
+    margin-top: 99px;
+    .banner_h1 {
+      max-width: 200px;
+      font-size: 16px * 2.5;
       &::before {
-        width: 300px;
-        height: 300px;
-        transform: rotate(45deg) scale(0.5);
+        content: '';
+        width: 200px;
+        height: 200px;
       }
     }
     .banner_image {
-      width: 420px;
-      height: 560px;
-      top: 325px;
-      left: calc(50vw - 210px);
+      width: 375px;
+      height: 600px;
+      margin-top: 75px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
   }
 }
