--- a/components/footer.module.css
+++ b/components/footer.module.css
@@ -23,8 +23,7 @@
 }
 
 .img {
-  filter: invert(100%) sepia(8%) saturate(11%) hue-rotate(349deg)
-    brightness(114%) contrast(89%);
+  filter: invert(100%) sepia(8%) saturate(11%) hue-rotate(349deg) brightness(114%) contrast(89%);
   transition: transform 0.3s;
 }
 
@@ -39,4 +38,19 @@
   margin: 0.3em 0;
   font-weight: 600;
   font-style: italic;
+}
+
+@media screen and (min-width: 992px) {
+  .footer h3 {
+    font-size: 24px;
+  }
+  .footer_text p {
+    font-size: 18px;
+  }
+  .img {
+    transform: scale(0.8);
+  }
+  .img:hover {
+    transform: scale(0.7);
+  }
 }
