--- a/components/navBar.module.scss
+++ b/components/navBar.module.scss
@@ -1,6 +1,6 @@
 .navbar {
   width: 100%;
-  max-width: 400px;
+  max-width: 300px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -14,14 +14,22 @@
   border-radius: 7px;
 }
 
+// @media screen and (min-width: 768px) {
+//   .navbar_item {
+//     font-size: 16px * 1.3;
+//   }
+// }
+
 @media screen and (min-width: 768px) {
-  .navbar_item {
-    font-size: 16px * 1.3;
+  .navbar {
+    margin: 0;
   }
 }
 
 @media screen and (min-width: 992px) {
   .navbar {
-    margin: 0;
+    .navbar_item {
+      font-size: 1.2rem;
+    }
   }
 }
