--- a/pages/_home.scss
+++ b/pages/_home.scss
@@ -90,10 +90,13 @@
         justify-content: center;
         align-items: center;
         grid-gap: $fontSize;
+        padding: 0 1rem;
+        padding-bottom: 75px;
         .article {
           margin: 0;
           width: 100%;
           height: 100%;
+
           h3 {
             font-size: $fontSize * 1.3;
             padding: 0.2em 0;
@@ -118,6 +121,17 @@
             grid-row: span 2;
           }
         }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  #main-home {
+    #main-content {
+      #articles-wall {
+        padding: 0;
+        padding-bottom: 75px;
       }
     }
   }
