--- a/pages/blog/_post.scss
+++ b/pages/blog/_post.scss
@@ -1,5 +1,6 @@
 #post-page {
-  margin-top: 209px;
+  margin-top: 130px;
+  padding-top: 16px;
   padding-bottom: 100px;
   overflow-x: hidden;
   .post {
@@ -79,9 +80,16 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  #post-page {
+    margin-top: 75px;
+  }
+}
+
 @media screen and (min-width: 992px) {
   #post-page {
-    margin-top: 123px;
+    margin-top: 99px;
+    padding-top: 25px;
     .post {
       ul {
         padding-left: $fontSize * 1.3;
