Se agrega basePath /nelsonblog a la configuracion de Next.js. Dado este cambio se tuvo que agregar el path en la rutas de archivos estaticos como imagen e imagenes en Sass. Por ultimo se corrige logica en el componente Navbar para indicar la ruta activa, ya que se modifico el basePath se tuvo que crear una pequeña logica para que este tomase la ruta activa

--- a/pages/_home.scss
+++ b/pages/_home.scss
@@ -45,31 +45,31 @@
           padding: 0.5em 0;
         }
         &:first-child {
-          background-image: url('/images/vscode.jpeg');
+          background-image: url('/nelsonblog/images/vscode.jpeg');
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center;
         }
         &:nth-child(2) {
-          background-image: url('/images/html.jpeg');
+          background-image: url('/nelsonblog/images/html.jpeg');
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center;
         }
         &:nth-child(3) {
-          background-image: url('/images/css.jpeg');
+          background-image: url('/nelsonblog/images/css.jpeg');
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center;
         }
         &:nth-child(4) {
-          background-image: url('/images/javascript.jpeg');
+          background-image: url('/nelsonblog/images/javascript.jpeg');
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center;
         }
         &:last-child {
-          background-image: url('/images/git.jpeg');
+          background-image: url('/nelsonblog/images/git.jpeg');
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center;
