--- a/components/banner.module.scss
+++ b/components/banner.module.scss
@@ -6,7 +6,7 @@
   margin-top: 130px;
   width: 100%;
   min-height: 100vh;
-  background-image: url('/images/banner.jpg');
+  background-image: url('/nelsonblog/images/banner.jpg');
   background-position: center top;
   background-size: cover;
   background-attachment: fixed;
